--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "node": ">=6.5",
     "npm": ">=3.10"
   },
-  "browserslist": [">1%", "last 4 versions", "Firefox ESR", "not ie < 9"],
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "Firefox ESR",
+    "not ie < 9"
+  ],
   "dependencies": {
     "@babel/polyfill": "7.0.0-beta.32",
     "awesome-bootstrap-checkbox": "^1.0.1",
@@ -45,13 +50,15 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
+    "react-router-dom": "^4.3.1",
     "react-sparklines": "^1.7.0",
     "reactstrap": "^6.0.1",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
+    "request-promise": "^4.2.2",
+    "semantic-ui-react": "^0.82.0",
     "sequelize": "^4.22.6",
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.5.0",
@@ -146,9 +153,18 @@
     "jquery": "3.3.1"
   },
   "lint-staged": {
-    "*.{js,jsx}": ["eslint --fix", "git add --force"],
-    "*.{json,graphql}": ["prettier --write", "git add --force"],
-    "*.{css,less,scss,sss}": ["stylelint --fix", "git add --force"]
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add --force"
+    ],
+    "*.{json,graphql}": [
+      "prettier --write",
+      "git add --force"
+    ],
+    "*.{css,less,scss,sss}": [
+      "stylelint --fix",
+      "git add --force"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
